--- a/package.json
+++ b/package.json
@@ -1,41 +1,34 @@
 {
-  "name": "my-runes-app",
-  "private": true,
-  "version": "0.0.0",
+  "name": "psbt-runestone",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^1.9.0",
     "bitcoinjs-lib": "^6.1.7",
     "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
-    "ecpair": "^3.0.0",
+    "crypto-browserify": "^3.12.0",
+    "ecpair": "^2.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "stream-browserify": "^3.0.0",
-    "tiny-secp256k1": "^2.2.3",
-    "util": "^0.12.5"
+    "tiny-secp256k1": "^2.2.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.15",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
+    "@types/node": "^20.11.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^9.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-top-level-await": "^1.5.0",
-    "vite-plugin-wasm": "^3.4.1"
+    "vite-plugin-wasm": "^3.4.1",
+    "vite-plugin-top-level-await": "^1.5.0"
   }
 }
